--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,8 @@ html {
 
 .page {
   display: flex;
+  justify-content: center;
+  align-items: flex-end;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -18,16 +20,13 @@ html {
   font-size: 18px;
   background-color: #1b1919;
 }
+
 .content {
-  display:grid;
-  grid-template-areas: 
-    "title title"
-    "video-list video-player"
-    "video-list video-description";
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto 1fr auto;
-  
+  display: grid;
+  margin: auto;  
+  align-content: end;
 }
+
 h1,
 h2,
 h3,
